<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_action"
            android:icon="@drawable/ic_more_vert"
            android:title="Action"
            app:showAsAction="always">

        <menu>
            <group>
                <item
                        android:id="@+id/action_add_single"
                        android:title="@string/add_single_item" />
                <item
                        android:id="@+id/action_add_multiple"
                        android:title="@string/add_multiple_items" />
                <item
                        android:id="@+id/action_update_single"
                        android:title="@string/update_single_item" />
                <item
                        android:id="@+id/action_set_multiple_items"
                        android:title="@string/set_multiple_items" />
                <item
                        android:id="@+id/action_remove_single"
                        android:title="@string/remove_single_item" />
                <item
                        android:id="@+id/action_clear"
                        android:title="@string/clear_all_items" />
            </group>
        </menu>
    </item>
</menu>